# CLibTemplate

./: .gitignore  CMakeLists.txt  README.md  foo_config.h.in
example/basic/: main.c
include/: types.h
include/foo/: foo.h
src/: foo.c
test/: hello_world.c
